# linux-web-server

./: .gitignore  Makefile  README.md  app.py  config.py  database.py  pyproject.toml  requirements-dev.txt  requirements.txt  schema.sql  setup.sh
blueprints/: auth.py  backup.py  files.py  monitor.py  users.py
guides/: Bhavya-Harshitha-Chennu.md  Mukunda-Chakravartula.md  Rasagyna-Peddapalli.md
presentation/: demo.md  script.md  slides.tex
presentation/test_files/documents/reports/: q1-summary.txt  q2-summary.txt
static/css/: style.css
static/js/: main.js
templates/: base.html  dashboard.html  login.html  profile.html
templates/backup/: index.html  schedule.html
templates/files/: index.html
templates/monitor/: index.html  logs.html
templates/users/: create.html  edit.html  list.html
tests/: conftest.py  test_auth.py  test_backup.py  test_decorators.py  test_files.py  test_monitor.py  test_user_quota.py  test_users.py
utils/: decorators.py  storage.py
